--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel=stylesheet href="./style.css" media="screen"> 
+  <link rel=stylesheet href="./style.css" media="screen">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,8 +17,6 @@
 </head>
 
 <body id=main>
- <!-- <img class="circle01" src="./images/bg-pattern-top.svg" alt="">-->
- <!--<img class="circle02" src="./images/bg-pattern-bottom.svg" alt="">-->
   
   <div id="box">
     <img class="logo" src="./images/image-victor.jpg" alt="">
@@ -25,7 +24,7 @@
     
     <h4 class="nomeinfo" style="margin: 0">Victor Crest <span style="color: #ccc;">26</span>  
       <br> <span style="color:#ccc; font-weight: lighter;">London</span></h4>
-  
+   
    <div id="info">
     <h4>80K <br> <span style="color:#ccc; font-weight: lighter;">Followers</span></h4>
     
